# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
include/: AST.h  error.h  lexer.h  parser.h
src/: AST.cpp  error.cpp  lexer.cpp  parser.cpp
test/: test_lexer.cpp  test_parser.cpp
